Fixed image stretching bug

--- a/src/app/components/ship-element/ship-element.component.scss
+++ b/src/app/components/ship-element/ship-element.component.scss
@@ -7,9 +7,14 @@
   min-width: 50%;
 }
 
-.ship-element-image {
+.ship-element-image-wide {
   width: 200px;
   height: 100px;
+}
+
+.ship-element-image-square {
+  width: 200px;
+  height: 200px;
 }
 
 ul {
